--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.0",
     "browser-image-compression": "^1.0.13",
+    "promise-file-reader": "^1.0.3",
     "react": "^17.0.1",
+    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
