--- a/package.json
+++ b/package.json
@@ -1,52 +1,59 @@
 {
-  "name": "social-network-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/browser-image-compression": "^1.0.1",
-    "@types/firebase": "^3.2.1",
-    "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^8.3.0",
-    "browser-image-compression": "^1.0.13",
-    "promise-file-reader": "^1.0.3",
-    "react": "^17.0.1",
-    "react-autosize-textarea": "^7.1.0",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "social-network-app",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@craco/craco": "^6.0.0",
+		"@tailwindcss/postcss7-compat": "^2.0.2",
+		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/react": "^11.1.0",
+		"@testing-library/user-event": "^12.1.10",
+		"@types/browser-image-compression": "^1.0.1",
+		"@types/firebase": "^3.2.1",
+		"@types/jest": "^26.0.15",
+		"@types/lodash": "^4.14.165",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.9.53",
+		"@types/react-dom": "^16.9.8",
+		"@types/react-router-dom": "^5.1.6",
+		"@types/uuid": "^8.3.0",
+		"autoprefixer": "9",
+		"browser-image-compression": "^1.0.13",
+		"date-fns": "^2.16.1",
+		"postcss": "7",
+		"promise-file-reader": "^1.0.3",
+		"react": "^17.0.1",
+		"react-autosize-textarea": "^7.1.0",
+		"react-dom": "^17.0.1",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.1",
+		"tailwindcss": "npm:@tailwindcss/postcss7-compat",
+		"typescript": "^4.1.2",
+		"use-debounce": "^5.2.0",
+		"web-vitals": "^0.2.4"
+	},
+	"scripts": {
+		"start": "craco start",
+		"build": "craco build",
+		"test": "craco test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
